--- a/Minesweeper_click/pom.xml
+++ b/Minesweeper_click/pom.xml
@@ -37,6 +37,14 @@
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
                 <version>1.1.4</version>
+                <configuration>
+                    <targetClasses>
+                        <param>minesweeper.logic*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>logic*</param>
+                    </targetTests>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
